# n8n_jobs_pipeline

./: .env.example  .gitignore  404.html  CLAUDE.md  Justfile  LICENSE  Makefile  README.md  TASKS.md  docker-compose.yml  index.html  mkdocs.yml  start.sh
.githooks/: pre-commit
assets/: README.md
cles-sources/: index.html
cv/: .dockerignore  Dockerfile  README.md  astro.config.mjs  certifications.json  cv-index.json  education.json  experiences.json  interests.json  languages.json  letter-data.sample.json  letter-template.mjs  letter-template.test.mjs  letter.mjs  letter.test.mjs  package-lock.json  package.json  personalization.example.json  personalization.sample.json  profile.json  projects.json  server.mjs  skills-manual.json  skills.json  template-ats.astro  template.astro
db/: init-metabase.sh  queries.sql  queries.test.sh  schema.sql  seed-profiles.sql
deploiement-vps/: index.html
docs/: airtable.md  architecture-technique.md  audit-optimisation.md  choix-techniques.md  cles-sources.md  contexte-claude.md  deploiement-vps.md  index.md  (+8 more)
services/agent-langgraph/: Dockerfile  README.md  app.py  pyproject.toml
services/agent-langgraph/agent/: airtable.py  db.py  graph.py  interview.py  llm.py  offer_extract.py  schema.py  tools.py
services/agent-langgraph/static/: index.html
services/agent-langgraph/tests/: test_airtable.py  test_cassettes.py  test_db.py  test_graph.py  test_interview.py  test_tools.py
services/agent-langgraph/tests/cassettes/: accroche-incorrigible.json  accroche-rejetee.json  entretien.json  offre-backend.json  spontanee.json
(+62 files in other folders)
