[project]
name = "agent-langgraph"
version = "0.1.0"
description = "Agent de candidature job-hunter — service LangGraph (extrait du workflow n8n 02)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.4",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.uv]
package = false
